# qt-japanese-submenu

./: README.md
cpp/: CMakeLists.txt  main.cpp
